Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13455

HSM client disconnected and fail to reconnect to server

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      [4354891.599839] Lustre: 14762:0:(client.c:2150:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1575163728/real 1575163728]  req@ffff9e568f3bb900 x1647812376
      751168/t0(0) o59->snx11133-MDT0000-mdc-ffff9e787a482000@10.156.8.4@o2ib:12/10 lens 456/224 e 0 to 1 dl 1575164273 ref 2 fl Rpc:X/0/ffffffff rc 0/-1
      
      Stack : 
      __schedule
      schedule
      schedule_timeout
      ptlrpc_set_wait
      ptlrpc_queue_wait
      mdc_ioc_hsm_ct_register
      mdc_hsm_ct_reregister
      libcfs_kkuc_group_foreach
      mdc_import_event
      ptlrpc_activate_import
      ptlrpc_import_recovery_state_machine
      ptlrpc_connect_interpret
      ptlrpc_check_set
      ptlrpc_check_set
      ptlrpcd_check
      ptlrpcd
      kthread
      Progs:  14762 "ptlrpcd_rcv"
      

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: